homelab/terraform/modules/storage/templates/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ name }
    service: others

spec:
  selector:
    istio: gateway

  servers:
    - hosts:
        - "*"
      port:
        name: redis
        number: 6379
        protocol: TCP
