homelab/terraform/modules/storage/templates/redis-ingress.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ${ name }
  namespace: ${ namespace }
  labels:
    app: ${ name }
    service: redis

spec:
  gateways:
    - storage-gw
  hosts:
    - ${ gateway }
  http:
    - route:
        - destination:
            host: ${ service_name }
            port:
              number: 6379
